--- a/algorithm/고득점Kit/오답노트.md
+++ b/algorithm/고득점Kit/오답노트.md
@@ -6,6 +6,8 @@
 
 - 재귀적 특성 고려 (base case (탈출 조건) / recursive case (동작 조건) / 
 
+- unboundlocalError 고려
+
 (힌트를 드리자면 재귀 코드를 보면 절대 흐름을 추적하려 마십시오. 
 
 오히려 문제를 정의한 식으로 보십시오. 
@@ -19,5 +21,14 @@ Q = deque([(0, 0)]) # sum / idx
 # TypeError: append() takes exactly one argument (2 given)
 # Q.append(sum + numbers[idx], idx + 1)
 Q.append((sum + numbers[idx], idx + 1))
+
+answer = 0
+    def dfs(sum, idx):
+        # base case
+        if idx == len(numbers):
+            if sum == target:
+                # UnboundLocalError: local variable 'answer' referenced before assignment
+                nonlocal answer # 이게 있어야 돌아감.
+                answer += 1
 ```
 
