Update 완주하지 못한 선수.md

--- a/algorithm/고득점Kit/해시/완주하지 못한 선수.md
+++ b/algorithm/고득점Kit/해시/완주하지 못한 선수.md
@@ -1,3 +1,6 @@
+막혔던 부분 - 동명이인의 경우 어떻게 처리해야 할 것인가?
+
+-> 다른 풀이들을 보니 두 리스트에 대해 정렬하여 찾는 것이 최선이었던 것 같다.
 
 ```py
 def solution(participant, completion):
