Update and rename 전화번호 목록.py to 전화번호 목록.md

--- a/algorithm/고득점Kit/해시/전화번호 목록.md
+++ b/algorithm/고득점Kit/해시/전화번호 목록.md
@@ -1,5 +1,5 @@
 
-
+```py
 # zip / startswith 이용
 def solution(phoneBook):
     phoneBook = sorted(phoneBook)
@@ -8,9 +8,9 @@ def solution(phoneBook):
         if p2.startswith(p1):
             return False
     return True
+```
 
-#################################################################
-
+```py
 # hash를 이용한 풀이 /
 def solution(phone_book):
     answer = True
@@ -24,36 +24,24 @@ def solution(phone_book):
             if temp in hash_map and temp != phone_number:
                 answer = False
     return answer
+```
 
-#################################################################
-
-# 그냥 전형적 브루트포스 풀이 / 다만 효율성이 아쉽다.
+```py
+# 브루트포스 풀이
 def solution(phone_book):
-    answer = True
-    phone_book.sort(key=lambda x: len(x))
-
-    """
-    for i in range(len(phone_book)):
-        j = 0
-
-        if j in phone_book:
-            if i == j:
-                pass
-            else:
-                answer = False
-        j += 1
-    """
-
+    
+    phone_book.sort()
+    
+    # for i in range(len(phone_book)):
     for i in range(len(phone_book) - 1):
-        for j in range(i + 1, len(phone_book)):
-            # print(phone_book[j][0:len(phone_book[i])])
+        # if phone_book[i] in phone_book[i+1:]:
+        if phone_book[i] in phone_book[i+1][0:]:
+            return False
+        
+    return True
+```
 
-            if phone_book[i] == phone_book[j][0:len(phone_book[i])]:
-                return False
-
-    return answer
-#################################################################
-
+```py
 # 해시 풀이에 대한 print 결과 확인하기
 phone_book = ["119", "97674223", "1195524421"]
 
@@ -74,3 +62,4 @@ for phone_number in phone_book:
 # 아 이런식으로.
 # {'119': 1, '97674223': 1, '1195524421': 1}
 print(hash_map)
+```
