--- a/algorithm/고득점Kit/해시/완주하지 못한 선수.md
+++ b/algorithm/고득점Kit/해시/완주하지 못한 선수.md
@@ -2,6 +2,29 @@
 
 -> 다른 풀이들을 보니 두 리스트에 대해 정렬하여 찾는 것이 최선이었던 것 같다.
 
+```py
+21-07-11 review
+def solution(participant, completion):
+    answer = ''
+    result = 0
+    
+    dic = {}
+    
+    for i in participant:
+        # TypeError: 'builtin_function_or_method' object is not subscriptable
+        # dic[hash[i]] = i
+        dic[hash(i)] = i
+        result += hash(i)
+    # print(dic.keys())
+    
+    for j in completion:
+        result -= hash(j)
+    
+    answer = dic[result]
+    return answer
+```
+
+<br>
 
 ```py
 def solution(participant, completion):
